Important changes from 1.5.4 => 1.5.5
============================================================
Internally code no longer uses the 'Hidden Organization' but expects both an id1/patientNr plus an id2/organizationId to be specified
Externally the organization id is still left out of the url when not needed
UPGRADE WARNING: Check all your (snippet) extensions to RespondentAction and project specific versions of ShowTrackTokenSnippet and ShowSingleSurveySnippet: you may need to specify extra parameters as the menu items need to know the organization id

Important changes from 1.5.3 => 1.5.4
============================================================
New logLevel project.ini setting
Added export of all patient data on a single page or PDF (if binary specified in project.ini)
Fixed a lot of issues with staff not being able to login or not being created
Fixed handling of token return on multi-url sites
Added maximum number of reminders sent to tokens
Fixed several date display and editing issues

Important changes from 1.5.2 => 1.5.3
============================================================
People can login using their e-mail address as user name. This can be activated by for respondents and staff seperately, by default this is off for both.
Showing a list of organizations to choose during login happens always except when 1) there is only one organization or 2) a url is used that is assigned to a specific organization.
Login & other password forms are now easy to customize on a per project basis.
Login and authorization rules are easier to extend.
All password rules are reported on change password forms.
The password reset cycle send a link that can be used to change the password straight away. By default the systems also asks the user to enter his/her birthday if available and username otherwise, but this can be removed / changed at the project level.

Important changes from 1.5.1 => 1.5.2
============================================================